--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,37 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}" <!-- Font Awesome -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" <!-- Custom -->
+    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}" <!-- Lightbox -->
     <title>Our Yard</title>
 </head>
+
 <body>
+    <!-- topbar -->
+    {% include 'partials/_topbar.html' %}
+
+    <!-- navbar -->
+    {% include 'partials/_navbar.html' %}
+
     {% block content%} {% endblock %}
+
+    <!-- footer -->
+    {% include 'partials/_footer.html' %}
+
+
+
+
+
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %} "></script>
+
 </body>
+
 </html>
